--- a/frontend/src/app/appointment/appointment.component.css
+++ b/frontend/src/app/appointment/appointment.component.css
@@ -5,3 +5,16 @@
   background-color: #ffa726;
   color: white;
 }
+mat-form-field {
+  width: 100%;
+}
+.example-radio-group {
+  display: flex;
+  flex-direction: column;
+  margin: 15px 0;
+  align-items: flex-start;
+}
+
+.example-radio-button {
+  margin: 5px;
+}
