--- a/frontend/src/app/contact-us/contact-us.component.html
+++ b/frontend/src/app/contact-us/contact-us.component.html
@@ -1,39 +1,40 @@
 <!-- Default form contact -->
-<form class="text-center border border-light p-5" [formGroup]="contactForm" (ngSubmit)="onSubmit()">
+<mat-card>
+    <form class="text-center border border-light" [formGroup]="contactForm" (ngSubmit)="onSubmit()">
 
-    <p class="h4 mb-4">Contact us</p>
+        <p class="h4 mb-4">Contact us</p>
 
-    <!-- Name -->
-    <input type="text" formControlName="contactFormName" id="defaultContactFormName" mdbInput class="form-control mb-4"
-        placeholder="Name">
+        <!-- Name -->
+        <input type="text" formControlName="contactFormName" id="defaultContactFormName" mdbInput
+            class="form-control mb-4" placeholder="Name">
 
-    <!-- Email -->
-    <input type="email" formControlName="contactFormEmail" id="defaultContactFormEmail" mdbInput
-        class="form-control mb-4" placeholder="E-mail">
+        <!-- Email -->
+        <input type="email" formControlName="contactFormEmail" id="defaultContactFormEmail" mdbInput
+            class="form-control mb-4" placeholder="E-mail">
 
-    <!-- Subject -->
-    <label>Subject</label>
-    <select formControlName="contactFormSubjects" class="browser-default custom-select mb-4">
-        <option value="" disabled>Choose option</option>
-        <option value="1" selected>Feedback</option>
-        <option value="2">Report a bug</option>
-        <option value="3">Feature request</option>
-        <option value="4">Feature request</option>
-    </select>
+        <!-- Subject -->
+        <label>Subject :-&nbsp; &nbsp;</label>
+        <select formControlName="contactFormSubjects" class="browser-default custom-select mb-4">
+            <option value="" disabled>Choose option</option>
+            <option value="1" selected>Feedback</option>
+            <option value="2">Report a bug</option>
+            <option value="3">Feature request</option>
+        </select>
 
-    <!-- Message -->
-    <div class="form-group">
-        <textarea formControlName="contactFormMessage" class="form-control rounded-0" mdbInput
-            id="exampleFormControlTextarea2" rows="3" placeholder="Message"></textarea>
-    </div>
-    <br>
-    <!-- Copy -->
-    <mat-checkbox class="mb-4">Send me a copy of this message</mat-checkbox>
-    <br>
+        <!-- Message -->
+        <div class="form-group">
+            <textarea formControlName="contactFormMessage" class="form-control rounded-0" mdbInput
+                id="exampleFormControlTextarea2" rows="3" placeholder="Message"></textarea>
+        </div>
+        <br>
+        <!-- Copy -->
+        <mat-checkbox class="mb-4">Send me a copy of this message</mat-checkbox>
+        <br>
 
-    <!-- Send button -->
-    <button mdbBtn color="info" outline="true" block="true" class="btn myButton" mdbWavesEffect type="submit"
-        [disabled]="disabledSubmitButton">Send</button>
+        <!-- Send button -->
+        <button mdbBtn color="info" outline="true" block="true" class="btn myButton" mdbWavesEffect type="submit"
+            [disabled]="disabledSubmitButton">Send</button>
 
-</form>
+    </form>
+</mat-card>
 <!-- Default form contact -->
