--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -14,9 +14,9 @@
             patients who visit us in good faith Moreover, safety of our patients is paramount and our vision is to be
             rated as among the best ortho hospitals for minimal post operative complications.</p>
         <input type="button" value="Book Appointment" class="btn myButton" id=""
-            style="margin-left: 15px; margin-top: 30px;" routerLink="/home/appointment"> &nbsp;
+            style="margin-left: 15px; margin-top: 30px;" (click)="openDialog()"> &nbsp;
         <input type="button" value="View Appointment" class="btn myButton" style="margin-top: 30px;"
-            routerLink="/home/viewAppointment">
+            (click)="viewAppointment()">
     </div>
 </div>
 <router-outlet></router-outlet>
