--- a/frontend/src/app/about-us/about-us.component.css
+++ b/frontend/src/app/about-us/about-us.component.css
@@ -192,7 +192,7 @@ p {
   font-size: 16px;
 }
 .story-container {
-  height: 100%;
+  /* height: 100%; */
   width: 100%;
   margin-top: 150px;
 }
@@ -227,4 +227,7 @@ ul li {
   line-height: 25px;
   padding-left: 5px;
   color: var(--textDarkColor);
+}
+agm-map {
+  height: 300px;
 }
