--- a/frontend/src/app/view-appointment/view-appointment.component.css
+++ b/frontend/src/app/view-appointment/view-appointment.component.css
@@ -3,7 +3,7 @@
 }
 table {
   width: 100%;
-  height: 100%;
+  height: 65%;
 }
 
 .mat-form-field {
@@ -17,4 +17,10 @@ table {
 }
 .gender {
   padding: 10px;
+}
+th.mat-header-cell:last-of-type,
+td.mat-cell:last-of-type,
+td.mat-footer-cell:last-of-type {
+  padding: 24px;
+  display: flex;
 }
